--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,11 +1,15 @@
-# .github/workflows/ci-cd-user-service.yml
-name: User Service CI/CD
+name: CI - Build & Push Docker Image
 
 on:
   push:
     branches:
       - '**'
+    paths:
+      - 'app/**'
   workflow_dispatch:
+
+permissions:
+  contents: write
 
 env:
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
@@ -26,13 +30,19 @@ jobs:
           username: ${{ env.DOCKER_USERNAME }}
           password: ${{ env.DOCKER_PASSWORD }}
 
-      - name: Build Docker image
+      - name: Build and push Docker image
         run: |
-          # Build the image from the 'app' directory, specifying the Dockerfile path
-          docker build -t ${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}:latest -f ./app/Dockerfile ./app
-          docker build -t ${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}:${{ github.sha }} -f ./app/Dockerfile ./app
-      
-      - name: Push Docker image
+          IMAGE_TAG="${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}:${{ github.sha }}"
+          docker build -t $IMAGE_TAG -f ./app/Dockerfile ./app
+          docker push $IMAGE_TAG
+
+      - name: Update and push deployment manifest
         run: |
-          docker push ${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}:latest
-          docker push ${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          
+          sed -i "s|image: ${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}:.*|image: ${{ env.DOCKER_REPO }}/${{ env.IMAGE_NAME }}:${{ github.sha }}|g" k8s/deployment.yaml
+          
+          git add k8s/deployment.yaml
+          git diff --staged --quiet || git commit -m "chore: Update image tag to ${{ github.sha }} [skip ci]"
+          git push
